crates/ra_flycheck/src/conv/snapshots/ra_flycheck__conv__test__snap_rustc_unused_variable.snap
---
source: crates/ra_flycheck/src/conv/test.rs
expression: diag
---
[
    MappedRustDiagnostic {
        location: Location {
            uri: "file:///test/driver/subcommand/repl.rs",
            range: Range {
                start: Position {
                    line: 290,
                    character: 8,
                },
                end: Position {
                    line: 290,
                    character: 11,
                },
            },
        },
        diagnostic: Diagnostic {
            range: Range {
                start: Position {
                    line: 290,
                    character: 8,
                },
                end: Position {
                    line: 290,
                    character: 11,
                },
            },
            severity: Some(
                Warning,
            ),
            code: Some(
                String(
                    "unused_variables",
                ),
            ),
            source: Some(
                "rustc",
            ),
            message: "unused variable: `foo`\n#[warn(unused_variables)] on by default",
            related_information: None,
            tags: Some(
                [
                    Unnecessary,
                ],
            ),
        },
        fixes: [
            CodeAction {
                title: "consider prefixing with an underscore",
                kind: Some(
                    "quickfix",
                ),
                diagnostics: None,
                edit: Some(
                    WorkspaceEdit {
                        changes: Some(
                            {
                                "file:///test/driver/subcommand/repl.rs": [
                                    TextEdit {
                                        range: Range {
                                            start: Position {
                                                line: 290,
                                                character: 8,
                                            },
                                            end: Position {
                                                line: 290,
                                                character: 11,
                                            },
                                        },
                                        new_text: "_foo",
                                    },
                                ],
                            },
                        ),
                        document_changes: None,
                    },
                ),
                command: None,
                is_preferred: None,
            },
        ],
    },
]
